# koe

./: .gitignore  AGENTS.md  CODEX_HANDOVER.md  CODEX_TASKS.md  LICENSE  README.md  launch_koe.vbs  pyproject.toml  run_koe.py
.claude/: settings.local.json
koe/: __init__.py  __main__.py  app.py  audio.py  cleaner.py  config.py  context.py  devices.py  dictionary.py  hotkey.py  icons.py  output.py  overlay.py  settings_window.py  snippet_prompt.py  snippets.py  sounds.py  tk_runtime.py  transcriber.py
tests/: test_cleaner.py  test_config.py  test_hotkey.py  test_output.py  test_speech_runtime.py
ui-preview/: index.html  script.js  styles.css
